# AgenticAuthor

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_ARCHITECTURE.md  EXPORT_IMPLEMENTATION_COMPLETE.md  LOD.md  Makefile  NETWORK_ANALYSIS.md  PRICING_ISSUES.md  README.md  TRUNCATION_ANALYSIS.md  ULTRATHINK_CHAPTERS_DISPLAY_BUG.md  ULTRATHINK_TREATMENT_FIDELITY.md  ULTRATHINK_VARIANT_ARCHITECTURE.md  ULTRATHINK_YAML_PARSING_ERROR.md  analyze_logs.py  codex-overview-2-diagrams.md  codex-overview-2.md  init_shared_git.py  iteration-plan-claude.md  iteration-plan-codex.md  iteration-system-bugs.md  lod-details.md  overview.md  package-lock.json  package.json  plan.md  pyproject.toml  story-export-edited-book-2025-09-17.json  verify_prose_iteration.py
.claude/: settings.local.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEAT_ARCHITECTURE.md  CHANGELOG.md  CODEBASE_ISSUES_ANALYSIS.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  EXPORT_AND_PUBLISHING_GUIDE.md  EXPORT_IMPLEMENTATION_SPEC.md  HARDCODED_PROMPTS_TO_MIGRATE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INLINED_PROMPTS_TODO.md  INLINE_JINJA2_TEMPLATES_EXPLAINED.md  ITERATION.md  KINDLE_FORMATTING_RESEARCH.md  KINDLE_PUBLISHING_METADATA_RESEARCH.md  LOD.md  PROJECT_README.md  PROJECT_YAML_USAGE.md  PROSE_REFACTOR_PLAN.md  PUBLISHING_METADATA_TEMPLATE.md  README.md  SCENE_SYSTEM_TEST_RESULTS.md  SESSION_SUMMARY_2025-10-14.md  ULTRATHINK_KEY_EVENTS_VALIDATION.md  ULTRATHINK_TREATMENT_FIDELITY.md  USER_GUIDE.md  VERIFICATION_REPORT.md  lod-details.md  wordcount-implementation-status.md  wordcount-implementation-todo.md  wordcount-iteration.md  wordcount-rethink-2025.md  wordcount.md
logs/: session_20250924_101716.json  (+4 more)
misc/: copy-edit.md  (+12 more)
(+181 files in other folders)
